# NameGenerator

./: .gitignore  main (copy).py  main.py  pyproject.toml
DBNames/: CheckSumDB.cfg  DBAnalytic.cfg  DBNames_Elf_Female  DBNames_Elf_Male  DBNames_Elf_Surnames  DBNames_Ork_Female  DBNames_Ork_Male  DBNames_Ork_Surnames  NamesBaseInitialize.cfg
bashscripts/: localMakeGraph.sh  setup.sh
configs/: CFGNames.py
database/: __init__.py  dbtest.py  medbAnalyticSchemas.py  medbCheckSumSchemas.py  medbNameSchemas.py
diagnostic/: countLines.py
diagnostic/modules/: diagnostics.py
logs/stats/profile/: prof-data.dot  prof-data.prof
modules/: dbTools.py  diagnostics.py  nameAnalysis.py  nameGen.py  nameGenAI.py  nameReader (copy).py  nameReader.py
modules/flask_module/: app.py  flask_main.py  routes.py
py_templates/: __init__.py  templateAnalysis.py
static/css/: footer.css  navbar.css  sidebar.css
templates/: __init__.py  base.html  carcas.html  index.html
tests/: test_Common.py  test_Service.py  test_dbTools_MongoDB.py  test_nameAnalysis.py  test_nameAnalysis_MongoDB.py  test_nameGen.py  test_nameGen_MongoDB.py  test_nameReader.py  test_nameReader_MongoDB.py
